Choose pack page complete (fix responsiveness)

--- a/shop.html
+++ b/shop.html
@@ -284,7 +284,7 @@
 					</ul>
 				</div>
 
-				<a href="#" class="button dark">Criar pack</a>
+				<a href="new-pack.html" class="button dark">Criar pack</a>
 			</div>
 
 			<div class="products-wrapper">
