Finish create pack customization

--- a/new-pack.html
+++ b/new-pack.html
@@ -89,8 +89,6 @@
 						</div>
 					</article>
 				</div>
-
-				<!-- FOOTER only belongs to filled cart, empty cart doesn't have footer -->
 				
 				<div class="modal-footer">
 					<div class="modal-footer-total">
@@ -108,7 +106,6 @@
 					<button class="button dark">Finalizar compra</button>
 				</div>
 
-				<!-- FOOTER only belongs to filled cart, empty cart doesn't have footer -->
 			</div>
 		</div>
 
@@ -172,7 +169,7 @@
 
 	  <main class="pickpack-flow">
 		<section class="pickpack-section page" id="pageOne">
-			<h4 class="pickpack-section-title">Escolha o tamanho do seu pack</h4>
+			<h4 class="pickpack-section-title">Escolhe o tamanho do teu pack</h4>
 
             <div class="row">
                 <div class="col-12 col-lg-4 mb-10">
@@ -219,153 +216,279 @@
 			<div class="footer-actions first-step">
 				<a href="#pickBeers" class="button dark disabled" id="nextButton">Seguinte</a>
 			</div>
-
-			<!--<div class="footer-actions second-step">
-
-				<button class="button button-icon dark disabled">
-                    <img src="assets/images/shopping-cart-icon.svg">
-                    Adicionar ao carrinho
-                </button>
-				<button class="button button-icon dark disabled">
-                    <img src="assets/images/shopping-cart-icon.svg">
-                    Adicionar ao carrinho
-                </button>
-			</div>-->
 		</section>
 
 
 
 		<section class="pickpack-section page" id="pageTwo">
-			<h4 class="pickpack-section-title">Escolha as suas cervejas</h4>
+			<h4 class="pickpack-section-title">Escolhe as tuas cervejas</h4>
 
             <div class="row">
-                <div class="col-12 col-md-9">
+                <div class="col-12 col-md-7 col-lg-9">
 					<div class="grid-container">
 						<div class="grid-item">
 							<h4 class="beer-list-title">Pilsener</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/pilsener-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Ambar</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
 								<img src="assets/images/ambar-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Weiss</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/weiss-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Ipa</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/ipa-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Dunkel</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/dunkel-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Pumkin Ale</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/pumpkin-ale-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Belgian Dark</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/belgian-dark-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						<div class="grid-item">
 							<h4 class="beer-list-title">Portuguese Pedro</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/portuguese-pedro-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 						
 						<div class="grid-item">
 							<h4 class="beer-list-title">Lausus</h4>
+							<small class="beer-list-price">2,70€</small>
 							<div class="beer-list-image">
-								<img src="assets/images/ambar-beer-md.png">
+								<img src="assets/images/lausus-beer-md.png">
 							</div>
 
 							<div class="quantity-input">
 								<input type="number" min="1" max="100" step="1" value="0">
-								<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
-								<span class="quantity-button quantity-up"><img src="./assets/images/plus.svg"></span>
+								<span class="quantity-button quantity-down">
+									<svg width="14" height="2" viewBox="0 0 14 2" fill="none">
+										<path d="M14 1L-5.96046e-08 1" stroke="#BDBDBD"/>
+									</svg>
+								</span>
+								<span class="quantity-button quantity-up">
+									<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+										<path d="M6.99997 0L6.99997 14" stroke="#BDBDBD"/>
+										<path d="M14 7L-5.96046e-08 7" stroke="#BDBDBD"/>
+									</svg>
+								</span>
 							</div>
 						</div>
 					</div>
                 </div>
 
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-5 col-lg-3">
 					<div class="sticky-wrapper">
                         <div class="checkout-card resume-card light">
                             <div class="checkout-card-header">
                                 <h4 class="checkout-card-header-title">Pack 8</h4>
                             </div>
                             <div class="checkout-card-body">
+
+								<!--------- SHOW ONLY WHEN PACK IS EMPTY 
+
+								<div class="empty-pack">
+									<p class="empty-info">Adiciona 8 cervejas para criares o teu pack!</p>
+								</div>
+
+								------- SHOW ONLY WHEN PACK IS EMPTY --------->
+
+								<div class="total-beers">
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="d-flex justify-content-between">
+										<small>Pilsener</small>
+										<small>1 x 33cl</small>
+									</div>
+									<div class="total-quantity d-flex justify-content-between">
+										<p>Quantidade</p>
+										<p>8 x 33cl</p>
+									</div>
+								</div>
+
                                 <div class="checkout-card-total">
                                     <div class="total-description">
                                         <h4 class="total-text">Total</h4>
                                     </div>
                                     <div class="total-values">
-                                        <h4 class="total-value">6.00€</h4>
+                                        <h4 class="total-value">0.00€</h4>
                                     </div>
                                 </div>
                             </div>
@@ -373,6 +496,17 @@
                     </div>
                 </div>
             </div>
+
+			<div class="footer-actions second-step">
+				<a href="#pickBeers" class="back-link" id="backButton">
+					<img class="back-link-arrow" src="assets/images/back-arrow.svg">
+					Voltar
+				</a>
+				<button class="button button-icon dark disabled" id="packCheckout">
+                    <img class="icon" src="assets/images/shopping-cart-icon.svg">
+                    Adicionar <span>&nbsp;ao carrinho</span>
+                </button>
+			</div>
 		</section>
 
 	  </main>
@@ -382,6 +516,5 @@
 	<script src="assets/js/quantity-input.js"></script>
 	<script src="assets/js/cart-modal.js"></script>
 	<script src="assets/js/new-pack.js"></script>
-	<script src="assets/js/quantity-input.js"></script>
   </body>
 </html>
